fixed alignment of projects

--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ p {
   font-size: calc(0.75vw + 0.35rem);
   color: rgb(0, 0, 0);
 }
+hr {
+  width: 100%;
+}
 /* Miscellaneous */
 .special {
   color: var(--primary-color);
@@ -171,6 +174,7 @@ i {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
   width: 100%;
 }
 .project {
@@ -186,7 +190,6 @@ i {
   justify-content: space-between;
   flex-direction: column;
   margin: 0 30px;
-  padding: 0px 15px 0 30px;
 }
 .project_info-container h3 {
   font-size: calc(0.6vw + 0.66rem);
